feat: add page view analytics, blog clicks, admin product CRUD
Made-with: Cursor